fix(container-size): remove gap-side variable for each container, this var will be updated by js in the project

--- a/scss/container.scss
+++ b/scss/container.scss
@@ -53,7 +53,7 @@
       }
     } @else {
       .#{$name} {
-        #{get-variable(gap-side)}: calc((var(get-variable("100vw"), 100vw) - var(get-variable($name))) * 0.5);
+        //#{get-variable(gap-side)}: calc((var(get-variable("100vw"), 100vw) - var(get-variable($name))) * 0.5);
         max-width: calc(var(get-variable($name)) + var(get-variable(gap-container), format-value($container-gap)) * 2);
       }
     }
